# LuxortumElad12345678

./: 3d-scene-demo.html  3d-world-control-panel.html  3d-world-control.js  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745627176936.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745627484332.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745627854757.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745628123118.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745628898133.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745630426981.txt  Pasted--DOCTYPE-html-html-lang-uk-head-meta-charset-UTF-8-meta-name-viewport-content-1745631099553.txt  Pasted--Flask-APScheduler--1745629229438.txt  Pasted--Luxortum--1745626366683.txt  Pasted--Luxortum--1745628425354.txt  Pasted--OpenAI-Luxortum--1745628584821.txt  Pasted--SQLite-Luxortum-WORLD-MOOD-impor-1745626280794.txt  Procfile  README.md  alt_app.py  app.py  creator-avatar-demo.html  creator-avatar.css  db_utils.py  deploy_instructions.md  direct_socket.py  fastest.py  homepage.html  index.html  instant_start.py  local_test.py  luxortum_carnets_deployment_guide.md  luxortum_world.db  main.py  main_minimal.py  new-tooltip-demo.html  new-world-mood-demo.html  packager.py  pyproject.toml  render.yaml  render_deployment_guide.md  render_readme.md  (+33 more)
.github/workflows/: codeql.yml
