[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "sendgrid>=6.11.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "stripe>=12.0.1",
    "jinja2>=3.1.6",
    "python-telegram-bot==13.13",
    "twilio>=9.5.2",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]
